force-app/main/default/objects/pubacc_hd__c/pubacc_hd__c.object-meta.xml
<CustomObject>
    <description>License Header</description>
    <label>License Header</label>
    <nameField>
        <label>Call Sign</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>