force-app/main/default/objects/pubacc_hd__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>To add the Date/time and updates with your name, use the &quot;Enter new comment&quot; field above.
This field will automatically update the value from the above field w/your name, date and text entered.</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>