force-app/main/default/objects/pubacc_hd__c/fields/Enter_Long_Comments_here__c.field-meta.xml
<CustomField>
    <fullName>Enter_Long_Comments_here__c</fullName>
    <inlineHelpText>Longer comment for Investigation, should allow for rich text and formatting</inlineHelpText>
    <label>Enter Long Comments here:</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>