force-app/main/default/objects/pubacc_hd__c/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigation</label>
    <referenceTo>Investigation__c</referenceTo>
    <relationshipLabel>License Headers</relationshipLabel>
    <relationshipName>License_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>