force-app/main/default/objects/pubacc_hd__c/fields/License_Status__c.field-meta.xml
<CustomField>
    <fullName>License_Status__c</fullName>
    <label>License Status</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>