force-app/main/default/objects/pubacc_hd__c/fields/Parent_Call_Sign__c.field-meta.xml
<CustomField>
    <fullName>Parent_Call_Sign__c</fullName>
    <description>Parent Call Sign</description>
    <label>Parent Call Sign</label>
    <length>100</length>
    <type>Text</type>
</CustomField>