force-app/main/default/objects/pubacc_hd__c/fields/Raido_Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Raido_Service_Code__c</fullName>
    <label>Radio Service Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>