force-app/main/default/objects/pubacc_hd__c/fields/Unique_System_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_System_Identifier__c</fullName>
    <label>Unique System Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>